Добавил AuthController изменил название Router и метода в нем на page добавил метод action

--- a/app/View/pages/signIn.html.twig
+++ b/app/View/pages/signIn.html.twig
@@ -17,7 +17,7 @@
         </ul>
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-login" role="tabpanel">
-                <form>
+                <form action='' method='post'>
                     <div class="form-outline mb-4">
                         <input type="email" id="loginEmail" class="form-control" placeholder="Email" />
                     </div>
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <div class="tab-pane fade" id="pills-register" role="tabpanel">
-                <form>
+                <form action='' method='post'>
                     <div class="form-outline mb-3">
                         <input type="text" id="registerUsername" class="form-control" placeholder="Username" />
                     </div>
