--- a/app/View/pages/signIn.html.twig
+++ b/app/View/pages/signIn.html.twig
@@ -17,26 +17,26 @@
         </ul>
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-login" role="tabpanel">
-                <form action='' method='post'>
+                <form action='/auth/login' method='post'>
                     <div class="form-outline mb-4">
-                        <input type="email" id="loginEmail" class="form-control" placeholder="Email" />
+                        <input type="email" name='email' id="loginEmail" class="form-control" placeholder="Email" />
                     </div>
                     <div class="form-outline mb-4">
-                        <input type="password" id="loginPassword" class="form-control" placeholder="Password" />
+                        <input type="password" name='password' id="loginPassword" class="form-control" placeholder="Password" />
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Sign in</button>
                 </form>
             </div>
             <div class="tab-pane fade" id="pills-register" role="tabpanel">
-                <form action='' method='post'>
+                <form action='/auth/register' method='post'>
                     <div class="form-outline mb-3">
-                        <input type="text" id="registerUsername" class="form-control" placeholder="Username" />
+                        <input type="text" name='name' id="registerUsername" class="form-control" placeholder="Username" />
                     </div>
                     <div class="form-outline mb-3">
-                        <input type="email" id="registerEmail" class="form-control" placeholder="Email" />
+                        <input type="email" name='email' id="registerEmail" class="form-control" placeholder="Email" />
                     </div>
                     <div class="form-outline mb-3">
-                        <input type="password" id="registerPassword" class="form-control" placeholder="Password" />
+                        <input type="password" name='password' id="registerPassword" class="form-control" placeholder="Password" />
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Sign up</button>
                 </form>
