Сделан логин, задел для профиля, далее мидлваре для приватных роутов

--- a/app/View/layout/base.html.twig
+++ b/app/View/layout/base.html.twig
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
 </head>
 <body>
-    <div id='app'>
-        <div class='container'>
+    <div id="app">
+        <div class="container">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                     <div class="container-fluid">
@@ -20,13 +20,19 @@
                                     <a class="nav-link" href="/test">Test</a>
                                 </li>
                             </ul>
-                            <ul class="navbar-nav">
-                                <a href="/signIn">
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H8m12 0-4 4m4-4-4-4M9 4H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h2"/>
-                                    </svg>
-                                </a>
-                            </ul>
+                            {% if is_logged %}
+                                <div style='display: flex; gap : 20px;'>
+                                    <span>Ваш профиль</span>{{ is_logged['name'] }}
+                                </div>
+                            {% else %}
+                                <ul class="navbar-nav">
+                                    <a href="/signIn">
+                                        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H8m12 0-4 4m4-4-4-4M9 4H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h2"/>
+                                        </svg>
+                                    </a>
+                                </ul>
+                            {% endif %}
                         </div>
                     </div>
                 </nav>
