--- a/app/View/layout/base.html.twig
+++ b/app/View/layout/base.html.twig
@@ -20,11 +20,11 @@
                                     <a class="nav-link" href="/test">Test</a>
                                 </li>
                             </ul>
-                            {% if is_logged %}
-                                <div style='display: flex; gap : 20px;'>
-                                    <span>Ваш профиль</span>{{ is_logged['name'] }}
+                            {% if user_data %}
+                                <div style='display: flex; gap : 10px;'>
+                                    <span>Ваш профиль</span>{{ user_data['name'] }}
                                     <form method="get" action='/logout'>
-                                        <button >LogOut</button>
+                                        <button style='background-color : transparent; border: none; border: 2px solid black; border-radius: 4px;'>LogOut</button>
                                     </form>
                                 </div>
                             {% else %}
