hot fix link bootstrap добавлена страница для редактирования профила соответствующие контроллеры

--- a/app/View/layout/base.html.twig
+++ b/app/View/layout/base.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Application</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
 </head>
 <body>
     <div id="app">
@@ -47,6 +47,6 @@
         </div>
     </div>
 
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
