--- a/app/View/pages/profile.html.twig
+++ b/app/View/pages/profile.html.twig
@@ -13,7 +13,7 @@
 
         <h3>Account Settings</h3>
         <ul>
-            <li><a href="/edit-profile">Edit Profile</a></li>
+            <li><a href="/profile/edit">Edit Profile</a></li>
             <li><a href="/change-password">Change Password</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
