разбил на отдельный файл js скрипт поправил ошщибку в форме регистрации

--- a/app/View/layout/base.html.twig
+++ b/app/View/layout/base.html.twig
@@ -3,6 +3,7 @@
 <head>
     <title>Application</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
+
 </head>
 <body>
     <div id="app">
@@ -46,6 +47,7 @@
             </main>
         </div>
     </div>
+    <script src="/assets/scripts/signIn.js"></script>
 
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
 </body>
