--- a/app/View/pages/signIn.html.twig
+++ b/app/View/pages/signIn.html.twig
@@ -1,6 +1,5 @@
 {% extends './layout/base.html.twig' %}
 {% block content %}
-
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card p-4 shadow-lg w-50 h5" style="height : 310px;">
         <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
@@ -31,13 +30,13 @@
             <div class="tab-pane fade" id="pills-register" role="tabpanel">
                 <form class='submit-form' id='register-form' action='/auth/register' method='post'>
                     <div class="form-outline mb-3">
-                        <input type="text" name='name' id="registerUsername" class="form-control" placeholder="Username" />
+                        <input type="text" name='name' id="name" id="registerUsername" class="form-control" placeholder="Username" />
                     </div>
                     <div class="form-outline mb-3">
-                        <input type="email" name='email' id="registerEmail" class="form-control" placeholder="Email" />
+                        <input type="email" name='email' id="email" id="registerEmail" class="form-control" placeholder="Email" />
                     </div>
                     <div class="form-outline mb-3">
-                        <input type="password" name='password' id="registerPassword" class="form-control" placeholder="Password" />
+                        <input type="password" name='password' id="password" id="registerPassword" class="form-control" placeholder="Password" />
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Sign up</button>
                 </form>
@@ -48,88 +47,7 @@
 
 <script>
 
-document.getElementById('login-form').addEventListener('submit', function(event) {
-    event.preventDefault(); 
-    const formData = new FormData(this);
-    const action = this.action;
-    fetch(action, {
-        method: 'POST',
-        body: formData
-    })
-    .then(response => {
-        if (response.headers.get('content-type')?.includes('application/json')) {
-            return response.json().then(data => ({isJson: true, data}));
-        } else {
-            return {isJson: false};
-        }
-    })
-    .then(result => {
-        console.log(result)
-        if (result.isJson) {
-            if (!result.data.success) {
-                document.querySelectorAll('.invalid-feedback').forEach(el => el.remove());
-                document.querySelectorAll('.is-invalid').forEach(el => el.classList.remove('is-invalid'));
-                
-                for (const [field, message] of Object.entries(result.data.errors)) {
-                    const input = document.getElementById(field);
-                    console.log(input)
 
-                    if (input) {
-
-                        input.classList.add('is-invalid');
-                        const errorDiv = document.createElement('div');
-                        errorDiv.className = 'invalid-feedback';
-                        errorDiv.textContent = message;
-                        input.parentNode.appendChild(errorDiv);
-                    }
-                }
-            }
-        } else {
-            window.location.href = '/profile';
-        }
-    })
-    .catch(error => console.error('Ошибка:', error));
-});
-
-document.getElementById('register-form').addEventListener('submit', function(event) {
-    event.preventDefault(); 
-    const formData = new FormData(this);
-    const action = this.action;
-    fetch(action, {
-        method: 'POST',
-        body: formData
-    })
-    .then(response => {
-        if (response.headers.get('content-type')?.includes('application/json')) {
-            return response.json().then(data => ({isJson: true, data}));
-        } else {
-            return {isJson: false};
-        }
-    })
-    .then(result => {
-        console.log(result.json);
-
-        if (result.isJson) {
-            if (!result.data.success) {
-                document.querySelectorAll('.invalid-feedback').forEach(el => el.remove());
-                document.querySelectorAll('.is-invalid').forEach(el => el.classList.remove('is-invalid'));
-                for (const [field, message] of Object.entries(result.data.errors)) {
-                    const input = document.getElementById(field);
-                    if (input) {
-                        input.classList.add('is-invalid');
-                        const errorDiv = document.createElement('div');
-                        errorDiv.className = 'invalid-feedback';
-                        errorDiv.textContent = message;
-                        input.parentNode.appendChild(errorDiv);
-                    }
-                }
-            }
-        } else {
-            window.location.href = '/signIn';
-        }
-    })
-    .catch(error => console.error('Ошибка:', error));
-});
 </script>
 <style>
 .is-invalid {
